--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-cookie-comply",
+  "name": "@pauljulianheise/vue-cookie-comply-reject-version",
   "description": "A Vue 3 component to handle cookie acceptance on your website",
-  "version": "0.0.3",
+  "version": "0.0.1",
   "files": [
     "dist"
   ],
